--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ okhttpLogginInterceptor = "4.12.0"
 composeMaterial3 = "1.2.1"
 coil = "2.6.0"
 systemuicontroller = "0.23.1"
+navigationAnimation = "0.33.0-alpha"
 
 #Test
 mockk = "1.13.11"
@@ -34,6 +35,7 @@ coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version
 okhttpLogginInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttpLogginInterceptor" }
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "systemuicontroller" }
+navigationAnimation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "navigationAnimation" }
 
 #test
 test-junit = { module = "junit:junit", version.ref = "junit" }
