--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ composeMaterial3 = "1.2.1"
 coil = "2.6.0"
 systemuicontroller = "0.23.1"
 navigationAnimation = "0.33.0-alpha"
+compose = "1.6.7"
 
 #Test
 mockk = "1.13.11"
@@ -27,6 +28,7 @@ okhttpMockwebserver = "4.12.0"
 [libraries]
 #dependencies
 coreKtx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
+composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 composeMaterial3 = { module = "androidx.compose.material3:material3-android", version.ref = "composeMaterial3" }
 retrofitGson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 koin = { module = "io.insert-koin:koin-core", version.ref = "koin" }
@@ -36,6 +38,9 @@ okhttpLogginInterceptor = { module = "com.squareup.okhttp3:logging-interceptor",
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "systemuicontroller" }
 navigationAnimation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "navigationAnimation" }
+
+#debug
+debug-composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 
 #test
 test-junit = { module = "junit:junit", version.ref = "junit" }
